about page fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2273,9 +2273,7 @@ form.mobileSearchForm button:hover {
 }
 
 .aboutContainer {
-    position: relative;
-    top: 10vh;
-    height: 90vh;
+    margin-top: 10vh !important;
 }
 
 .aboutListItems {
@@ -2307,6 +2305,7 @@ form.mobileSearchForm button:hover {
 .poofSearchPageFooter {
     background-color: #0C1344;
     color: white;
+    margin-top: 8vh;
 }
 
 /*Mobile Search Page*/
